--- a/Products.html
+++ b/Products.html
@@ -21,13 +21,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Hello, world!</title>
+    <title>All Products - Redstore</title>
 </head>
 
 <body>
 
     <!-- start Navbar -->
-    <div class="header">
+    <!-- <div class="header"> -->
         <div class="container">
             <div class="navbar">
                 <div class="logo">
@@ -46,41 +46,27 @@
                     <img src="./RedStore_Img/images/menu.png" class="menu-icon" onclick="menutoggle()" alt="">
                 </nav>
             </div>
-
-
-            <div class="row d-flex align-item-center justify-content-center mt-5">
-                <div class="col-lg-6 p-5">
-                    <h1 class="fs-2">Give Yout Workout <br> A new Style</h1>
-                    <p>Succesn isn't always about greateness. It's about cinsistency. consistent <br> hard work gains
-                        success. Greateness will come.</p>
-                    <a href="#" class="btn btn-outline-secondary">Explore Now &#8594;</a>
-                </div>
-                <div class="col-lg-6"><img src="./RedStore_Img/images/image1.png" style="max-width: 100%;" alt=""></div>
-            </div>
-
         </div>
-    </div>
+    <!-- </div> -->
     <!-- End Navbar -->
 
-    <!-- Featured Categories -->
-    <div class="container my-5">
-        <div class="row mx-5">
-            <div class="col-4">
-                <img src="./RedStore_Img/images/category-1.jpg" width="100%" alt="">
-            </div>
-            <div class="col-4">
-                <img src="./RedStore_Img/images/category-2.jpg" width="100%" alt="">
-            </div>
-            <div class="col-4">
-                <img src="./RedStore_Img/images/category-3.jpg" width="100%" alt="">
-            </div>
-        </div>
-    </div>
-    <!-- End Featured Categories -->
+   
 
     <!-- Featured Products -->
+        <div class="container">
+            <div class="row-2">
+                <h2>All Products</h2>
+                <select class="w-25 px-2">
+                    <option>Default Shorting</option>
+                    <option>Short by price</option>
+                    <option>Short by Popularty</option>
+                    <option>Short by rating</option>
+                    <option>Short by sale</option>
+                </select>
+            </div>
+        </div>
+
     <div class="container categorys">
-        <h2 class="title">Featured Products </h2>
         <div class="row">
             <div class="col-lg-3 p-2 mb-3">
                 <img src="./RedStore_Img/images/product-1.jpg" width="100%" alt="">
@@ -131,10 +117,9 @@
                 <p>$50.00</p>
             </div>
         </div>
-        <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-5.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-1.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -146,7 +131,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-6.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-2.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -158,7 +143,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-7.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-3.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -170,7 +155,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-8.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-4.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -181,11 +166,10 @@
                 </div>
                 <p>$50.00</p>
             </div>
-
         </div>
         <div class="row">
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-9.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-1.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -197,7 +181,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-10.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-2.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -209,7 +193,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-11.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-3.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -221,7 +205,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-12.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/product-4.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -232,116 +216,23 @@
                 </div>
                 <p>$50.00</p>
             </div>
+           <div class="page-btn">
+               <span>1</span>
+               <span>2</span>
+               <span>3</span>
+               <span>4</span>
+               <span>&#8594;</span>
+           </div>
         </div>
     </div>
 
     <!--End Featured Products -->
 
-    <!-- Offers -->
-    <div class="container-fluid offer">
-        <div class="row py-5 d-flex justify-content-between align-items-center">
-            <div class="col-lg-6">
-                <img src="./RedStore_Img/images/exclusive.png" class="offer-img" alt="">
-            </div>
-            <div class="col-lg-6">
-                <p>Exclusively Available on Redstore</p>
-                <h1 class="fw-bold">Smart Band 4</h1>
-                <small style="color: #555;">The Mi Smart Band 4 Features a 39.9% larger (than Mi Brand 3) Amolled color
-                    full-touch display with adjustable brightness, so everything is clear as can be.</small>
-                <br>
-                <a href="#" class="btn btn-outline-danger mt-3">Buy Now &#8594;</a>
-            </div>
-        </div>
-    </div>
-    <!-- End Offers -->
+    
 
-    <!-- Testimonial -->
-    <div class="container-fluid">
-        <div class="testimonial">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card text-center">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente, quos autem neque
-                            distinctio, quae repellendus omnis.</p>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-half-o"></i>
-                        </div>
-                        <img src="./RedStore_Img/images/user-1.png" width="50px"
-                            style="border-radius: 50%; padding: 10px 0;" alt="">
-                        <h5 class="fw-bold">Sean Parker</h5>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card text-center">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente, quos autem neque
-                            distinctio, quae repellendus omnis.</p>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-half-o"></i>
-                        </div>
-                        <img src="./RedStore_Img/images/user-2.png" width="50px"
-                            style="border-radius: 50%; padding: 10px 0;" alt="">
-                        <h5 class="fw-bold">Jitu Sharma</h5>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card text-center">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente, quos autem neque
-                            distinctio, quae repellendus omnis.</p>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-half-o"></i>
-                        </div>
-                        <img src="./RedStore_Img/images/user-3.png" width="50px"
-                            style="border-radius: 50%; padding: 10px 0;" alt="">
-                        <h5 class="fw-bold">Manju Sahoran</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End Testimonial -->
 
-    <!-- Brands -->
-    <div class="container my-5">
-        <div class="brands">
-            <div class="row">
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-godrej.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-coca-cola.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-oppo.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-paypal.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-coca-cola.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-godrej.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Brands -->
 
+    
     <!-- Footer -->
     <div class="container-fluid footer bg-dark">
 
