--- a/index.html
+++ b/index.html
@@ -31,31 +31,32 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img src="./RedStore_Img/images/logo.png" class="w-50" alt="">
+                    <img src="./RedStore_Img/images/GADGET MANIA LOGO.png" class="w-50" alt="">
                     <!-- <h2>logo</h2> -->
                 </div>
                 <nav>
-                    <ul id="MenuItems">
+                    <ul>
                         <li><a href="#">HOME</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Contact US</a></li>
                         <li><a href="#">Account</a></li>
+                        <li> <a href="#"><i class='fas fa-shopping-cart' style="font-size:25px;color: rgb(87, 89, 92);"></i></a></li>
                     </ul>
-                    <img src="./RedStore_Img/images/cart.png" width="30px" height="30px" alt="">
-                    <img src="./RedStore_Img/images/menu.png" class="menu-icon" onclick="menutoggle()" alt="">
+                    
                 </nav>
             </div>
 
 
-            <div class="row d-flex align-item-center justify-content-center mt-5">
+            <div class="row d-flex justify-content-center mt-5 crausel">
                 <div class="col-lg-6 p-5">
-                    <h1 class="fs-2">Give Yout Workout <br> A new Style</h1>
+                    <h1 class="fs-2 text-light">Give Yout Workout <br> A new Style</h1>
                     <p>Succesn isn't always about greateness. It's about cinsistency. consistent <br> hard work gains
                         success. Greateness will come.</p>
-                    <a href="#" class="btn btn-outline-secondary">Explore Now &#8594;</a>
+                    <a href="#" class="btn btn-outline-danger">Explore Now &#8594;</a>
                 </div>
-                <div class="col-lg-6"><img src="./RedStore_Img/images/image1.png" style="max-width: 100%;" alt=""></div>
+                <div class="col-lg-6"><img class="bgimg" src="./RedStore_Img/images/crausel gif.gif"alt="">
+                </div>
             </div>
 
         </div>
@@ -65,14 +66,14 @@
     <!-- Featured Categories -->
     <div class="container my-5">
         <div class="row mx-5">
-            <div class="col-4">
-                <img src="./RedStore_Img/images/category-1.jpg" width="100%" alt="">
+            <div class="col-4" style="background-color: black;">
+                <img src="./RedStore_Img/images/Nura-headphones.gif" width="100%" alt="">
             </div>
-            <div class="col-4">
-                <img src="./RedStore_Img/images/category-2.jpg" width="100%" alt="">
+            <div class="col-4" style="background-color: black;">
+                <img src="./RedStore_Img/images/laptop 1.gif" width="100%" alt="">
             </div>
-            <div class="col-4">
-                <img src="./RedStore_Img/images/category-3.jpg" width="100%" alt="">
+            <div class="col-4" style="background-color: black;">
+                <img src="./RedStore_Img/images/iphone13.gif" width="100%" alt="">
             </div>
         </div>
     </div>
@@ -83,7 +84,7 @@
         <h2 class="title">Featured Products </h2>
         <div class="row">
             <div class="col-lg-3 p-2 mb-3">
-                <img src="./RedStore_Img/images/product-1.jpg" width="100%" alt="">
+                <img src="./RedStore_Img/images/vivo x70 img.jpg" width="100%" alt="">
                 <h5 class="pt-1">Red Printed T-shirts</h5>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -239,9 +240,9 @@
 
     <!-- Offers -->
     <div class="container-fluid offer">
-        <div class="row py-5 d-flex justify-content-between align-items-center">
-            <div class="col-lg-6">
-                <img src="./RedStore_Img/images/exclusive.png" class="offer-img" alt="">
+        <div class="row pt-5 d-flex justify-content-between align-items-center">
+            <div class=" col-lg-6">
+                <img src="./RedStore_Img/images/smartwatch.gif" class="offer-img" alt="">
             </div>
             <div class="col-lg-6">
                 <p>Exclusively Available on Redstore</p>
@@ -254,93 +255,6 @@
         </div>
     </div>
     <!-- End Offers -->
-
-    <!-- Testimonial -->
-    <div class="container-fluid">
-        <div class="testimonial">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card text-center">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente, quos autem neque
-                            distinctio, quae repellendus omnis.</p>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-half-o"></i>
-                        </div>
-                        <img src="./RedStore_Img/images/user-1.png" width="50px"
-                            style="border-radius: 50%; padding: 10px 0;" alt="">
-                        <h5 class="fw-bold">Sean Parker</h5>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card text-center">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente, quos autem neque
-                            distinctio, quae repellendus omnis.</p>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-half-o"></i>
-                        </div>
-                        <img src="./RedStore_Img/images/user-2.png" width="50px"
-                            style="border-radius: 50%; padding: 10px 0;" alt="">
-                        <h5 class="fw-bold">Jitu Sharma</h5>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card text-center">
-                        <i class="fa fa-quote-left"></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam sapiente, quos autem neque
-                            distinctio, quae repellendus omnis.</p>
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-half-o"></i>
-                        </div>
-                        <img src="./RedStore_Img/images/user-3.png" width="50px"
-                            style="border-radius: 50%; padding: 10px 0;" alt="">
-                        <h5 class="fw-bold">Manju Sahoran</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End Testimonial -->
-
-    <!-- Brands -->
-    <div class="container my-5">
-        <div class="brands">
-            <div class="row">
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-godrej.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-coca-cola.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-oppo.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-paypal.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-coca-cola.png" alt="">
-                </div>
-                <div class="col-lg-2">
-                    <img src="./RedStore_Img/images/logo-godrej.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Brands -->
 
     <!-- Footer -->
     <div class="container-fluid footer bg-dark">
